[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/UI Skins/Default/sick.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Gameplay/Rating.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/UI Skins/Default/num0.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Rating" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Num0" type="Sprite" parent="."]
position = Vector2( -164.5, 118.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Num1" type="Sprite" parent="."]
position = Vector2( -116.5, 118.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Num2" type="Sprite" parent="."]
position = Vector2( -68.5, 118.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Num3" type="Sprite" parent="."]
visible = false
position = Vector2( -20.5, 118.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="MS" type="Label" parent="."]
margin_left = -26.0
margin_top = 64.0
margin_right = 58.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "0.00ms"
